notebook now adds events to calendar

--- a/case_net_scrape_testing.ipynb
+++ b/case_net_scrape_testing.ipynb
@@ -2,20 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 69,
    "source": [
+    "import pandas as pd\r\n",
+    "from pandas import Timestamp\r\n",
+    "import time\r\n",
+    "import os.path\r\n",
+    "from datetime import datetime\r\n",
     "from selenium import webdriver\r\n",
     "from selenium.webdriver.support.ui import Select\r\n",
-    "from datetime import datetime\r\n",
-    "import pandas as pd\r\n",
-    "import time"
+    "from googleapiclient.discovery import build\r\n",
+    "from google_auth_oauthlib.flow import InstalledAppFlow\r\n",
+    "from google.auth.transport.requests import Request\r\n",
+    "from google.oauth2.credentials import Credentials"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "source": [
     "chromedriver_location = \"chrome_driver/chromedriver\""
    ],
@@ -24,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "source": [
     "# xPaths to each required search element in the field. \r\n",
     "district_drop_down = '//*[@id=\"courtId\"]'\r\n",
@@ -39,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "source": [
     "def slice_per(source, step):\r\n",
     "    return [source[i::step] for i in range(step)]"
@@ -49,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 40,
    "source": [
     "main_df = pd.DataFrame({\r\n",
     "    \"date\" : [],\r\n",
@@ -67,10 +73,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 46,
    "source": [
-    "start_date = '8/16/2021' #input('Start Date(MM/DD/YYYY): ')\r\n",
-    "end_date = '9/6/2021' #input('End Date(MM/DD/YYYY): ')\r\n",
+    "start_date = '8/17/2021' #input('Start Date(MM/DD/YYYY): ')\r\n",
+    "end_date = '8/24/2021' #input('End Date(MM/DD/YYYY): ')\r\n",
+    "EMAIL = 'weabooojones93@gmail.com' #input('Enter email address: ')\r\n",
     "# get a list of dates in the range specified\r\n",
     "datelist = pd.date_range(start_date, end_date).tolist()\r\n",
     "# convert the dates to the desired format mm/dd/yyyy\r\n",
@@ -82,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 41,
    "source": [
     "# FORM INPUT AND SUBMIT\r\n",
     "\r\n",
@@ -142,11 +149,390 @@
     "    # add collected data to main dataframe\r\n",
     "    main_df = pd.concat([df, main_df], axis=0, join='inner')\r\n",
     "    main_df.drop_duplicates(inplace=True)\r\n",
+    "    main_df.reset_index(drop=True, inplace=True)\r\n",
     "    # go back to previous page\r\n",
     "    driver.back()\r\n",
     "\r\n",
     "driver.close()\r\n"
    ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "source": [
+    "\r\n",
+    "main_df"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "                          date           case_num  \\\n",
+       "0      Monday, August 23, 2021  1811-CR04181-01     \n",
+       "1      Monday, August 23, 2021  1911-CR01773-01     \n",
+       "2      Monday, August 23, 2021  1711-CR02341-01     \n",
+       "3    Thursday, August 19, 2021  1911-CR01457-01     \n",
+       "4    Thursday, August 19, 2021     1911-CR03589     \n",
+       "5    Thursday, August 19, 2021     1911-CR01411     \n",
+       "6    Thursday, August 19, 2021     2011-CR04156     \n",
+       "7   Wednesday, August 18, 2021  1611-CR03626-01     \n",
+       "8   Wednesday, August 18, 2021     2011-CR00837     \n",
+       "9   Wednesday, August 18, 2021     1911-CR04606     \n",
+       "\n",
+       "                               case_style      time    days  \\\n",
+       "0               ST V DENNIS ALLEN WRIGHT   8:30 AM   1 OF 1   \n",
+       "1             ST V JESSICA MARIE MESHELL   1:30 PM   1 OF 1   \n",
+       "2             ST V JESSICA MARIE MESHELL   1:30 PM   1 OF 1   \n",
+       "3                      ST V SEAN D. GWIN   8:30 AM   1 OF 1   \n",
+       "4              ST V BRITTANY NICOLE ROSE   1:30 PM   1 OF 1   \n",
+       "5                   ST V BRITTANY N ROSE   1:30 PM   1 OF 1   \n",
+       "6                 ST V PERCY LEE BENNETT   1:30 PM   1 OF 1   \n",
+       "7  ST V NICOLE MARIE MILLER-POLKINGHORNE   9:00 AM   1 OF 1   \n",
+       "8                   ST V DYLAN T DEPTULA   1:30 PM   1 OF 1   \n",
+       "9           ST V HARRY BERNARD SCHIEN IV   9:00 AM   1 OF 1   \n",
+       "\n",
+       "                      event  \\\n",
+       "0   Probation Viol Hearing    \n",
+       "1   Probation Viol Hearing    \n",
+       "2   Probation Viol Hearing    \n",
+       "3      Disposition Hearing    \n",
+       "4      Preliminary Hearing    \n",
+       "5      Preliminary Hearing    \n",
+       "6      Disposition Hearing    \n",
+       "7  Bond Appearance Hearing    \n",
+       "8      Preliminary Hearing    \n",
+       "9   Counsel Status Hearing    \n",
+       "\n",
+       "                                            location  \\\n",
+       "0  Location: DIVISION 4 COURTROOM St Charles Circ...   \n",
+       "1  Location: DIVISION 7 COURTROOM St Charles Circ...   \n",
+       "2  Location: DIVISION 7 COURTROOM St Charles Circ...   \n",
+       "3  Location: DIVISION 4 COURTROOM St Charles Circ...   \n",
+       "4  Location: DIVISION 10 COURTROOM St Charles Cir...   \n",
+       "5  Location: DIVISION 10 COURTROOM St Charles Cir...   \n",
+       "6  Location: DIVISION 10 COURTROOM St Charles Cir...   \n",
+       "7  Location: DIVISION 2 COURTROOM St Charles Circ...   \n",
+       "8  Location: DIVISION 9 COURTROOM St Charles Circ...   \n",
+       "9  Location: DIVISION 9 COURTROOM St Charles Circ...   \n",
+       "\n",
+       "                                         judge  \n",
+       "0    Judge/Commissioner: MICHAEL JAMES FAGRAS   \n",
+       "1        Judge/Commissioner: DANIEL G PELIKAN   \n",
+       "2         Judge/Commissioner: DANIEL G PELIKAN  \n",
+       "3    Judge/Commissioner: MICHAEL JAMES FAGRAS   \n",
+       "4        Judge/Commissioner: NORMAN C STEIMEL   \n",
+       "5         Judge/Commissioner: NORMAN C STEIMEL  \n",
+       "6         Judge/Commissioner: NORMAN C STEIMEL  \n",
+       "7     Judge/Commissioner: DEBORAH JEAN ALESSI   \n",
+       "8  Judge/Commissioner: ELIZABETH WALKER SWANN   \n",
+       "9   Judge/Commissioner: ELIZABETH WALKER SWANN  "
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>case_num</th>\n",
+       "      <th>case_style</th>\n",
+       "      <th>time</th>\n",
+       "      <th>days</th>\n",
+       "      <th>event</th>\n",
+       "      <th>location</th>\n",
+       "      <th>judge</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Monday, August 23, 2021</td>\n",
+       "      <td>1811-CR04181-01</td>\n",
+       "      <td>ST V DENNIS ALLEN WRIGHT</td>\n",
+       "      <td>8:30 AM</td>\n",
+       "      <td>1 OF 1</td>\n",
+       "      <td>Probation Viol Hearing</td>\n",
+       "      <td>Location: DIVISION 4 COURTROOM St Charles Circ...</td>\n",
+       "      <td>Judge/Commissioner: MICHAEL JAMES FAGRAS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Monday, August 23, 2021</td>\n",
+       "      <td>1911-CR01773-01</td>\n",
+       "      <td>ST V JESSICA MARIE MESHELL</td>\n",
+       "      <td>1:30 PM</td>\n",
+       "      <td>1 OF 1</td>\n",
+       "      <td>Probation Viol Hearing</td>\n",
+       "      <td>Location: DIVISION 7 COURTROOM St Charles Circ...</td>\n",
+       "      <td>Judge/Commissioner: DANIEL G PELIKAN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Monday, August 23, 2021</td>\n",
+       "      <td>1711-CR02341-01</td>\n",
+       "      <td>ST V JESSICA MARIE MESHELL</td>\n",
+       "      <td>1:30 PM</td>\n",
+       "      <td>1 OF 1</td>\n",
+       "      <td>Probation Viol Hearing</td>\n",
+       "      <td>Location: DIVISION 7 COURTROOM St Charles Circ...</td>\n",
+       "      <td>Judge/Commissioner: DANIEL G PELIKAN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Thursday, August 19, 2021</td>\n",
+       "      <td>1911-CR01457-01</td>\n",
+       "      <td>ST V SEAN D. GWIN</td>\n",
+       "      <td>8:30 AM</td>\n",
+       "      <td>1 OF 1</td>\n",
+       "      <td>Disposition Hearing</td>\n",
+       "      <td>Location: DIVISION 4 COURTROOM St Charles Circ...</td>\n",
+       "      <td>Judge/Commissioner: MICHAEL JAMES FAGRAS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Thursday, August 19, 2021</td>\n",
+       "      <td>1911-CR03589</td>\n",
+       "      <td>ST V BRITTANY NICOLE ROSE</td>\n",
+       "      <td>1:30 PM</td>\n",
+       "      <td>1 OF 1</td>\n",
+       "      <td>Preliminary Hearing</td>\n",
+       "      <td>Location: DIVISION 10 COURTROOM St Charles Cir...</td>\n",
+       "      <td>Judge/Commissioner: NORMAN C STEIMEL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Thursday, August 19, 2021</td>\n",
+       "      <td>1911-CR01411</td>\n",
+       "      <td>ST V BRITTANY N ROSE</td>\n",
+       "      <td>1:30 PM</td>\n",
+       "      <td>1 OF 1</td>\n",
+       "      <td>Preliminary Hearing</td>\n",
+       "      <td>Location: DIVISION 10 COURTROOM St Charles Cir...</td>\n",
+       "      <td>Judge/Commissioner: NORMAN C STEIMEL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Thursday, August 19, 2021</td>\n",
+       "      <td>2011-CR04156</td>\n",
+       "      <td>ST V PERCY LEE BENNETT</td>\n",
+       "      <td>1:30 PM</td>\n",
+       "      <td>1 OF 1</td>\n",
+       "      <td>Disposition Hearing</td>\n",
+       "      <td>Location: DIVISION 10 COURTROOM St Charles Cir...</td>\n",
+       "      <td>Judge/Commissioner: NORMAN C STEIMEL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Wednesday, August 18, 2021</td>\n",
+       "      <td>1611-CR03626-01</td>\n",
+       "      <td>ST V NICOLE MARIE MILLER-POLKINGHORNE</td>\n",
+       "      <td>9:00 AM</td>\n",
+       "      <td>1 OF 1</td>\n",
+       "      <td>Bond Appearance Hearing</td>\n",
+       "      <td>Location: DIVISION 2 COURTROOM St Charles Circ...</td>\n",
+       "      <td>Judge/Commissioner: DEBORAH JEAN ALESSI</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Wednesday, August 18, 2021</td>\n",
+       "      <td>2011-CR00837</td>\n",
+       "      <td>ST V DYLAN T DEPTULA</td>\n",
+       "      <td>1:30 PM</td>\n",
+       "      <td>1 OF 1</td>\n",
+       "      <td>Preliminary Hearing</td>\n",
+       "      <td>Location: DIVISION 9 COURTROOM St Charles Circ...</td>\n",
+       "      <td>Judge/Commissioner: ELIZABETH WALKER SWANN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Wednesday, August 18, 2021</td>\n",
+       "      <td>1911-CR04606</td>\n",
+       "      <td>ST V HARRY BERNARD SCHIEN IV</td>\n",
+       "      <td>9:00 AM</td>\n",
+       "      <td>1 OF 1</td>\n",
+       "      <td>Counsel Status Hearing</td>\n",
+       "      <td>Location: DIVISION 9 COURTROOM St Charles Circ...</td>\n",
+       "      <td>Judge/Commissioner: ELIZABETH WALKER SWANN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 42
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "source": [
+    "\r\n",
+    "# If modifying these scopes, delete the file token.json.\r\n",
+    "SCOPES = ['https://www.googleapis.com/auth/calendar']\r\n",
+    "\r\n",
+    "\"\"\"Shows basic usage of the Google Calendar API.\r\n",
+    "Prints the start and name of the next 10 events on the user's calendar.\r\n",
+    "\"\"\"\r\n",
+    "creds = None\r\n",
+    "# The file token.json stores the user's access and refresh tokens, and is\r\n",
+    "# created automatically when the authorization flow completes for the first\r\n",
+    "# time.\r\n",
+    "if os.path.exists('token.json'):\r\n",
+    "    creds = Credentials.from_authorized_user_file('token.json', SCOPES)\r\n",
+    "# If there are no (valid) credentials available, let the user log in.\r\n",
+    "if not creds or not creds.valid:\r\n",
+    "    if creds and creds.expired and creds.refresh_token:\r\n",
+    "        creds.refresh(Request())\r\n",
+    "    else:\r\n",
+    "        flow = InstalledAppFlow.from_client_secrets_file(\r\n",
+    "            'credentials.json', SCOPES)\r\n",
+    "        creds = flow.run_local_server(port=0)\r\n",
+    "    # Save the credentials for the next run\r\n",
+    "    with open('token.json', 'w') as token:\r\n",
+    "        token.write(creds.to_json())\r\n",
+    "\r\n",
+    "service = build('calendar', 'v3', credentials=creds)\r\n"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Please visit this URL to authorize this application: https://accounts.google.com/o/oauth2/auth?response_type=code&client_id=85388203790-j5s5bfd3ml7cfbaogd98l4ovk0ktrhah.apps.googleusercontent.com&redirect_uri=http%3A%2F%2Flocalhost%3A64407%2F&scope=https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fcalendar&state=z7i2TEYggiZKBcY3n7uWUmKMSRMz7O&access_type=offline\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "source": [
+    "time = Timestamp.isoformat(pd.to_datetime(main_df['date'][0] + ' ' + main_df['time'][0]))\r\n",
+    "event = {\r\n",
+    "  'summary': 'Google I/O 2015',\r\n",
+    "  'location': '800 Howard St., San Francisco, CA 94103',\r\n",
+    "  'description': 'A chance to hear more about Google\\'s developer products.',\r\n",
+    "  'start': {\r\n",
+    "    'dateTime': time,\r\n",
+    "    'timeZone': 'America/Chicago',\r\n",
+    "  },\r\n",
+    "  'end': {\r\n",
+    "    'dateTime': time,\r\n",
+    "    'timeZone': 'America/Chicago',\r\n",
+    "  },\r\n",
+    "}\r\n",
+    "\r\n",
+    "event = service.events().insert(calendarId='weabooojones93@gmail.com', body=event).execute()"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "source": [
+    "for i in range(len(main_df)):\r\n",
+    "    print(main_df['judge'][i])\r\n",
+    "    event = {\r\n",
+    "        'summary': main_df['case_style'][i],\r\n",
+    "        'description': f'Case #: {main_df[\"case_num\"][i]} \\nEvent: {main_df[\"event\"][i]} \\n{main_df[\"judge\"][i]} \\n{main_df[\"location\"][i]} \\nDays: {main_df[\"days\"][i]}',\r\n",
+    "        'start': {\r\n",
+    "            'dateTime': Timestamp.isoformat(pd.to_datetime(main_df['date'][i] + ' ' + main_df['time'][i])),\r\n",
+    "            'timeZone': 'America/Chicago',\r\n",
+    "        },\r\n",
+    "        'end': {\r\n",
+    "            'dateTime': Timestamp.isoformat(pd.to_datetime(main_df['date'][i] + ' ' + main_df['time'][i])),\r\n",
+    "            'timeZone': 'America/Chicago',\r\n",
+    "        },\r\n",
+    "    }\r\n",
+    "\r\n",
+    "    event = service.events().insert(calendarId=EMAIL, body=event).execute()"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Judge/Commissioner: MICHAEL JAMES FAGRAS \n",
+      "Judge/Commissioner: DANIEL G PELIKAN \n",
+      "Judge/Commissioner: DANIEL G PELIKAN\n",
+      "Judge/Commissioner: MICHAEL JAMES FAGRAS \n",
+      "Judge/Commissioner: NORMAN C STEIMEL \n",
+      "Judge/Commissioner: NORMAN C STEIMEL\n",
+      "Judge/Commissioner: NORMAN C STEIMEL\n",
+      "Judge/Commissioner: DEBORAH JEAN ALESSI \n",
+      "Judge/Commissioner: ELIZABETH WALKER SWANN \n",
+      "Judge/Commissioner: ELIZABETH WALKER SWANN\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "source": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0   2021-08-23 08:30:00\n",
+       "1   2021-08-23 13:30:00\n",
+       "2   2021-08-23 13:30:00\n",
+       "dtype: datetime64[ns]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 47
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "source": [
+    "Timestamp.isoformat(pd.to_datetime(main_df['date'][0] + ' ' + main_df['time'][0]))"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'2021-08-23T08:30:00'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 72
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
    "outputs": [],
    "metadata": {}
   }
