notebook checks for existing events before adding new ones

--- a/case_net_scrape_testing.ipynb
+++ b/case_net_scrape_testing.ipynb
@@ -427,32 +427,65 @@
    "cell_type": "code",
    "execution_count": 73,
    "source": [
-    "time = Timestamp.isoformat(pd.to_datetime(main_df['date'][0] + ' ' + main_df['time'][0]))\r\n",
-    "event = {\r\n",
-    "  'summary': 'Google I/O 2015',\r\n",
-    "  'location': '800 Howard St., San Francisco, CA 94103',\r\n",
-    "  'description': 'A chance to hear more about Google\\'s developer products.',\r\n",
-    "  'start': {\r\n",
-    "    'dateTime': time,\r\n",
-    "    'timeZone': 'America/Chicago',\r\n",
-    "  },\r\n",
-    "  'end': {\r\n",
-    "    'dateTime': time,\r\n",
-    "    'timeZone': 'America/Chicago',\r\n",
-    "  },\r\n",
-    "}\r\n",
+    "# time = Timestamp.isoformat(pd.to_datetime(main_df['date'][0] + ' ' + main_df['time'][0]))\r\n",
+    "# event = {\r\n",
+    "#   'summary': 'Google I/O 2015',\r\n",
+    "#   'location': '800 Howard St., San Francisco, CA 94103',\r\n",
+    "#   'description': 'A chance to hear more about Google\\'s developer products.',\r\n",
+    "#   'start': {\r\n",
+    "#     'dateTime': time,\r\n",
+    "#     'timeZone': 'America/Chicago',\r\n",
+    "#   },\r\n",
+    "#   'end': {\r\n",
+    "#     'dateTime': time,\r\n",
+    "#     'timeZone': 'America/Chicago',\r\n",
+    "#   },\r\n",
+    "# }\r\n",
     "\r\n",
-    "event = service.events().insert(calendarId='weabooojones93@gmail.com', body=event).execute()"
+    "# event = service.events().insert(calendarId='weabooojones93@gmail.com', body=event).execute()"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "source": [
+    "    # Call the Calendar API\r\n",
+    "    now = datetime.datetime.utcnow().isoformat() + 'Z' # 'Z' indicates UTC time\r\n",
+    "    print('Getting the upcoming 10 events')\r\n",
+    "    events_result = service.events().list(calendarId=EMAIL, timeMin=now,\r\n",
+    "                                        maxResults=10, singleEvents=True,\r\n",
+    "                                        orderBy='startTime').execute()\r\n",
+    "    events = events_result.get('items', [])\r\n",
+    "\r\n",
+    "    if not events:\r\n",
+    "        print('No upcoming events found.')\r\n",
+    "    for event in events:\r\n",
+    "        start = event['start'].get('dateTime', event['start'].get('date'))\r\n",
+    "        print(start, event['summary'])"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "source": [
+    "existing_events = []\r\n",
+    "now = datetime.utcnow().isoformat() + 'Z' # 'Z' indicates UTC time\r\n",
+    "events_result = service.events().list(calendarId=EMAIL, timeMin=now,\r\n",
+    "                                    maxResults=30, singleEvents=True,\r\n",
+    "                                    orderBy='startTime').execute()\r\n",
+    "events = events_result.get('items', [])\r\n",
+    "\r\n",
+    "if not events:\r\n",
+    "    print('No upcoming events found.')\r\n",
+    "for event in events:\r\n",
+    "    existing_events.append(event['summary'])\r\n",
+    "\r\n",
     "for i in range(len(main_df)):\r\n",
-    "    print(main_df['judge'][i])\r\n",
+    "    \r\n",
     "    event = {\r\n",
     "        'summary': main_df['case_style'][i],\r\n",
     "        'description': f'Case #: {main_df[\"case_num\"][i]} \\nEvent: {main_df[\"event\"][i]} \\n{main_df[\"judge\"][i]} \\n{main_df[\"location\"][i]} \\nDays: {main_df[\"days\"][i]}',\r\n",
@@ -466,6 +499,12 @@
     "        },\r\n",
     "    }\r\n",
     "\r\n",
+    "    if event['summary'] in existing_events:\r\n",
+    "        print('Event already exists.')\r\n",
+    "        continue\r\n",
+    "    else :\r\n",
+    "        print(f'Completed {i + 1} of {len(main_df) }')\r\n",
+    "\r\n",
     "    event = service.events().insert(calendarId=EMAIL, body=event).execute()"
    ],
    "outputs": [
@@ -473,38 +512,18 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Judge/Commissioner: MICHAEL JAMES FAGRAS \n",
-      "Judge/Commissioner: DANIEL G PELIKAN \n",
-      "Judge/Commissioner: DANIEL G PELIKAN\n",
-      "Judge/Commissioner: MICHAEL JAMES FAGRAS \n",
-      "Judge/Commissioner: NORMAN C STEIMEL \n",
-      "Judge/Commissioner: NORMAN C STEIMEL\n",
-      "Judge/Commissioner: NORMAN C STEIMEL\n",
-      "Judge/Commissioner: DEBORAH JEAN ALESSI \n",
-      "Judge/Commissioner: ELIZABETH WALKER SWANN \n",
-      "Judge/Commissioner: ELIZABETH WALKER SWANN\n"
+      "Getting the upcoming 10 events\n",
+      "Event already exists.\n",
+      "Event already exists.\n",
+      "Event already exists.\n",
+      "Event already exists.\n",
+      "Event already exists.\n",
+      "Event already exists.\n",
+      "Event already exists.\n",
+      "Event already exists.\n",
+      "Event already exists.\n",
+      "Event already exists.\n"
      ]
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "source": [],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "0   2021-08-23 08:30:00\n",
-       "1   2021-08-23 13:30:00\n",
-       "2   2021-08-23 13:30:00\n",
-       "dtype: datetime64[ns]"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 47
     }
    ],
    "metadata": {}
@@ -525,6 +544,62 @@
      },
      "metadata": {},
      "execution_count": 72
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "source": [
+    "    existing_events = []\r\n",
+    "    now = datetime.utcnow().isoformat() + 'Z' # 'Z' indicates UTC time\r\n",
+    "    print('Getting the upcoming 10 events')\r\n",
+    "    events_result = service.events().list(calendarId=EMAIL, timeMin=now,\r\n",
+    "                                        maxResults=10, singleEvents=True,\r\n",
+    "                                        orderBy='startTime').execute()\r\n",
+    "    events = events_result.get('items', [])\r\n",
+    "\r\n",
+    "    if not events:\r\n",
+    "        print('No upcoming events found.')\r\n",
+    "    for event in events:\r\n",
+    "        start = event['start'].get('dateTime', event['start'].get('date'))\r\n",
+    "        existing_events.append(event['summary'])"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Getting the upcoming 10 events\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "source": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "['ST V NICOLE MARIE MILLER-POLKINGHORNE ',\n",
+       " 'ST V HARRY BERNARD SCHIEN IV ',\n",
+       " 'ST V DYLAN T DEPTULA ',\n",
+       " 'ST V SEAN D. GWIN ',\n",
+       " 'ST V BRITTANY N ROSE ',\n",
+       " 'ST V PERCY LEE BENNETT ',\n",
+       " 'ST V BRITTANY NICOLE ROSE ',\n",
+       " 'ST V DENNIS ALLEN WRIGHT ',\n",
+       " 'ST V JESSICA MARIE MESHELL ',\n",
+       " 'ST V JESSICA MARIE MESHELL ']"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 88
     }
    ],
    "metadata": {}
